1.Slider  icon  IE8  fix. 2.Slider icon firefox fix. 3.mages added. 4.header ,Footer and sub-header shadow fix for IE.

--- a/src/main/webapp/css/new.css
+++ b/src/main/webapp/css/new.css
@@ -23,6 +23,8 @@
     position: fixed !important;
     top: 0;
     z-index: 4;
+    border-bottom-style: solid;
+    border-bottom-width: 1px;
 }
 
 
@@ -940,7 +942,7 @@ li.current {
 }
 
 .careers-slide2-type2-img{
-   width: 120px;height: 140px;margin-left: 0.5em;
+    width: 120px;height: 140px;margin-left: 0.5em;
 }
 
 .caseStudies-img{
